<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="186dp"
        tools:layout_editor_absoluteY="188dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:background="#000000"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tittle_app"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="23dp"
            android:orientation="vertical"></LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="82dp"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edtxt_code"
                android:layout_width="341dp"
                android:layout_height="56dp"
                android:ems="10"
                android:hint="@string/edtxt_code"
                android:inputType="number"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="82dp"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edtxt_description"
                android:layout_width="346dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/edtxt_description"
                android:inputType="textPersonName"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="82dp"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edtxt_price"
                android:layout_width="349dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/edtxt_price"
                android:inputType="numberDecimal"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="233dp"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_registry"
                android:layout_width="277dp"
                android:layout_height="wrap_content"
                android:onClick="Registrar"
                android:paddingBottom="14dp"
                android:text="@string/btn_registry"
                android:textSize="18sp"
                app:backgroundTint="#4CAF50" />

            <Button
                android:id="@+id/btn_search"
                android:layout_width="274dp"
                android:layout_height="wrap_content"
                android:onClick="Buscar"
                android:paddingBottom="14dp"
                android:text="@string/btn_search"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btn_modify"
                android:layout_width="275dp"
                android:layout_height="wrap_content"
                android:onClick="Actualizar"
                android:paddingBottom="14dp"
                android:text="@string/btn_modify"
                android:textSize="18sp"
                app:backgroundTint="#B5C516" />

            <Button
                android:id="@+id/btn_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="Eliminar"
                android:paddingBottom="14dp"
                android:text="@string/btn_delete"
                android:textSize="18sp"
                app:backgroundTint="#9A1212" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>